update version and plugin comfiguration